Console: fixup missing background image references (classic/light)

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -175,7 +175,7 @@ i {
   border: none;
   border-bottom: 1px solid #fb7;
   word-spacing: .1em;
-  background: #ffe url(/themes/console/images/errortriangle.png) no-repeat 8px center / auto 60% !important;
+  background: #ffe var(--err) no-repeat 8px center / auto 60% !important;
 }
 
 .warning p {
@@ -240,7 +240,7 @@ img[src="/themes/console/images/i2plogo.png"] {
   font-weight: 700;
   border: 1px solid #aaafce;
   box-shadow: var(--highlight), inset 0 0 1px 1px #900;
-  background: #f2f2ff url(/themes/console/images/info/errortriangle.png) 20px 40% no-repeat;
+  background: #f2f2ff var(--err) no-repeat 20px 40% / 36px;
 }
 
 #error500 .sorry {
@@ -259,7 +259,7 @@ img[src="/themes/console/images/i2plogo.png"] {
 }
 
 #warning2 {
-  margin-top: -15px;
+  margin-top: -1px;
   padding: 0 15px 5px;
   min-width: 540px;
   font-weight: 400;
@@ -3356,7 +3356,7 @@ div.error {
   margin-left: -5px;
   padding: 10px 5px;
   color: #900;
-  background: url(/themes/console/images/info/errortriangle.png) no-repeat 20px center / 28px auto;
+  background: var(--err) no-repeat 20px center / 28px;
 }
 
 div.notice {
@@ -7660,16 +7660,15 @@ h2#debug_portmapper {
 
 #debug h3.debug_outboundsessions, #debug h3.debug_inboundsessions {
   padding: 6px 10px 6px 28px;
-  background-blend-mode: luminosity, normal;
 }
 
 #debug h3.debug_outboundsessions {
   margin-top: -6px !important;
-  background: url(/themes/console/images/outbound.png) 6px center no-repeat, linear-gradient(to bottom, #fff 50%, #fafbff 50%) !important;
+  background: url(/themes/console/images/outbound.svg) no-repeat 6px center / 16px, linear-gradient(to bottom, #fff 50%, #fafbff 50%) !important;
 }
 
 #debug h3.debug_inboundsessions {
-  background: url(/themes/console/images/inbound.png) 6px center no-repeat, linear-gradient(to bottom, #fff 50%, #fafbff 50%) !important;
+  background: url(/themes/console/images/inbound.svg) no-repeat 6px center / 16px, linear-gradient(to bottom, #fff 50%, #fafbff 50%) !important;
 }
 
 .debug_version {
